[package]
name = "diceware-gen"
version = "0.2.2"
authors = ["Justin Harrison <me@justinharrison.ca>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/matthin/diceware-gen"
description = "This program generates random passphrases based on EFF's long wordlist."

[dependencies]
rand = "0.7"
